@@ -1,0 +1,18 @@
+<run>
+  <precisionModel scale="1.0" offsetx="0.0" offsety="0.0"/>
+
+<case>
+  <desc>AA</desc>
+  <a>
+POLYGON ((545 317, 617 379, 581 321, 545 317))
+	  </a>
+  <b>
+POLYGON ((484 290, 558 359, 543 309, 484 290))
+
+  	</b>
+<test>
+  <op name="intersection" arg1="A" arg2="B"> POINT (545 317) </op>
+</test>
+</case>
+
+</run>
