@@ -1,3 +1,10 @@
+2006-12-18 Sandro Santilli <strk@refractions.net>
+
+	* source/precision/GeometrySnapper.cpp (computeSnapTolerance):
+	  properly compute snap tolerance for fixed precision geometries.
+	* tests/xmltester/: Makefile.am, TestRobustOverlayFixed.xml:
+	  new test for fixed precision snapping.
+
 ---------  GEOS-3.0.0rc3 release [2006-12-14] --------------------------
 
 2006-12-13 Mateusz Loskot <mateusz@loskot.net>
